--- a/src/components/Projects.scss
+++ b/src/components/Projects.scss
@@ -11,7 +11,6 @@
     border: 1.5px solid #f5f5f5;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.05);
-    overflow-y: hidden;
     overscroll-behavior: none;
     scrollbar-width: none;
     -ms-overflow-style: none;
