--- a/src/components/Work.scss
+++ b/src/components/Work.scss
@@ -2,14 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    overflow: auto;
+    overflow: visible;
 }
 
 #gallery-frame {
     width: 100%;
     aspect-ratio: 0.56/1;
     border: 1.5px solid #f5f5f5;
-    overflow-y: scroll;
+    overflow-y: auto;
     overscroll-behavior: none;
     scrollbar-width: none;
     -ms-overflow-style: none;
@@ -41,7 +41,7 @@
 	font: inherit;
 	cursor: pointer;
 	outline: inherit;
-    transition: 0.4s ease-in;
+    transition: 0.4s ease-in-out;
 
     img {
         width: auto;
